nested relaytion is ok